Fixed Responsive issues on Mobile devices

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -82,4 +82,9 @@
     width: 80%;
     grid-template-columns: 1fr;
   }
+  .boxes {
+    div {
+      font-size: 1rem;
+    }
+  }
 }
