--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,7 +44,7 @@ header {
 }
 
 main {
-  padding: 4rem;
+  padding: 2rem;
   //height: 100%;
   min-height: calc(100vh - 60px);
 
@@ -108,7 +108,7 @@ main {
 }
 .job {
   background: lighten($primary-color, 5);
-  padding: 5rem;
+  // padding: 5rem;
   border-bottom: $secondry-color 5px solid;
 }
 //Work/projects
@@ -187,6 +187,7 @@ main {
   padding: 1rem;
   background: darken($primary-color, 10);
   color: #fff;
+  width: 100%;
   height: 60px;
 }
 
